packages/next-swc/crates/core/tests/errors/next-font-loaders/export-let/output.js
import firaCode from '@next/font/google/target.css?{"path":"pages/test.tsx","import":"Abel","arguments":[],"variableName":"firaCode"}';
import inter from '@next/font/google/target.css?{"path":"pages/test.tsx","import":"Inter","arguments":[],"variableName":"inter"}';
import React from 'react';
export { firaCode };
export { inter };
